--- a/src/features/unified-share-modal/UnifiedShareModal.scss
+++ b/src/features/unified-share-modal/UnifiedShareModal.scss
@@ -216,7 +216,7 @@
         }
 
         .text-area-container textarea::placeholder {
-            color: $bdl-gray-50;
+            color: $bdl-gray-62;
         }
 
         .bdl-PillSelector {
@@ -229,7 +229,7 @@
         border: 1px solid $bdl-gray-20;
 
         .bdl-PillSelector-input::placeholder {
-            color: $bdl-gray-50;
+            color: $bdl-gray-62;
         }
 
         &.bdl-is-disabled,
@@ -239,7 +239,7 @@
             box-shadow: none;
 
             .bdl-PillSelector-input::placeholder {
-                color: $bdl-gray-50;
+                color: $bdl-gray-62;
             }
 
             &:hover {
